<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="#00FFFFFF"
    android:id="@+id/container">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sign_up_button">
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:src="@mipmap/logo_white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:lines="1"
            android:hint="@string/login_username_hint"
            android:background="#33FFFFFF"
            android:paddingLeft="10dp"
            android:layout_below="@+id/logo_image"
            android:textColor="#FFFFFFFF"
            />
        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:lines="1"
            android:hint="@string/login_password_hint"
            android:background="#33FFFFFF"
            android:paddingLeft="10dp"
            android:layout_below="@+id/edit_text_username"
            android:textColor="#FFFFFFFF"
            />
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:text="@string/login_text"
            android:background="#00FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/edit_text_password"/>

    </RelativeLayout>
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FFFFFF"
        android:textColor="#FFFFFFFF"
        android:textSize="12sp"
        android:text="@string/sign_up_in_login_text"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
