<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:id="@+id/container"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:src="@mipmap/logo_white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/logo_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/logo_text"
            android:layout_below="@+id/logo_image" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:textColor="#FFFFFFFF"
            android:text="@string/sign_up_email_text"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#33FFFFFF"
            android:textColor="#FFFFFFFF"
            android:text="@string/login_text"
            android:textSize="12sp"
            />
    </LinearLayout>
</RelativeLayout>
